--- a/src/components/Profile/custom.css
+++ b/src/components/Profile/custom.css
@@ -34,10 +34,10 @@
 .btn.btn-primary{
 	background-image: linear-gradient(#157aff, #344bff, #541bff);
 }
-
+/* 
 body {
     padding-bottom: 20px;
-  }
+  } */
   
   .navbar {
     margin-bottom: 20px;
@@ -81,7 +81,7 @@ body {
 .editMenu{
     box-shadow:0px 0px 14px 2px #d5d6d7;
     /* width: 16%; */
-    min-height: 77vh;
+    min-height: 90vh;
     z-index: 99;
 }
 .w-4{
