--- a/src/components/Artscreen/custom.css
+++ b/src/components/Artscreen/custom.css
@@ -122,7 +122,7 @@ body {
     .d-n-m{
         display: none !important;
     }
-    #navbarsCollapse, .d-b-m{
+    .navbar-expand-md .navbar-collapse#navbarsCollapse, .d-b-m{
         display: block !important;
     }
     .mlr-20 {
