--- a/src/components/Artscreen/custom.css
+++ b/src/components/Artscreen/custom.css
@@ -126,8 +126,8 @@ body {
         display: block !important;
     }
     .mlr-20 {
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-left: 10px !important;
+        margin-right: 10px !important;
     }
     .searchForm{
         margin-bottom: 15px;
@@ -143,12 +143,12 @@ body {
         padding-right: 30px !important;
     }
     .ml-15-m{
-        margin-left: 15px;
+        margin-left: 15px !important;
     }
     .navbar-brand{
-        display: flex;
-        justify-content: flex-end;
-        margin-bottom: 10px;
+        display: flex !important;
+        justify-content: flex-end !important;
+        margin-bottom: 10px !important;
     }
     .fs-20.defaultColor.pb-2.mt-4{
         margin-top: 40px !important;
@@ -157,24 +157,24 @@ body {
         width: 100% !important;
     }
     .createStory {
-        width: 100%;
+        width: 100% !important;
         padding-top: 40px !important;
     }
     .createStory p{
-        margin-bottom: 30px;
+        margin-bottom: 30px !important;
     }
     .iconCont {
-        padding: 9px 4px;
-        width: 15%;
+        padding: 9px 4px !important;
+        width: 15% !important;
     }
     .iconCont .fs-40.grayColor{
-        font-size: 30px;
+        font-size: 30px !important;
     }
     .welcomeHead {
-        font-size: 18px;
+        font-size: 18px !important;
     }
     .fs-15 {
-        font-size: 13px;
+        font-size: 13px !important;
     }
     .pt-5, .py-5 {
         padding-top: 2rem!important;
@@ -191,28 +191,28 @@ body {
         padding-right: 10px !important;
     }
     #sliderIndicators {
-        min-height: 240px;
+        min-height: 240px !important;
     }
     .w-30-m{
         width: 32% !important;
     }
     
     .shareIcons{
-        padding-left: 10px;
+        padding-left: 10px !important;
     }
 
     .editMenu {
-        min-height: 60vh;
+        min-height: 60vh !important;
     }
     #root{
-        overflow-x: hidden;
+        overflow-x: hidden  !important;
     }
     .plr-15-m{
         padding-left: 15px !important;
         padding-right: 15px !important;
     }
     .row.w-98{
-        margin-left: 0;
+        margin-left: 0 !important;
     }
 
     }
