--- a/src/components/Artscreen/custom.css
+++ b/src/components/Artscreen/custom.css
@@ -122,7 +122,7 @@ body {
     .d-n-m{
         display: none !important;
     }
-    .navbar-expand-md .navbar-collapse#navbarsCollapse, .d-b-m, .collapse:not(.show){
+    .navbar-expand-md .navbar-collapse#navbarsCollapse, .d-b-m, .collapse:not(.show), nav.navbar .collapse.navbar-collapse.w-100{
         display: block !important;
     }
     .mlr-20 {
