--- a/src/components/Artscreen/custom.css
+++ b/src/components/Artscreen/custom.css
@@ -110,7 +110,7 @@ body {
   }
 
 
-  @media (max-width: 768px){
+  @media screen and (max-width: 768px){
     .navbar-expand-md .navbar-collapse {
         /* display: flex!important; */
         flex-basis: auto;
