--- a/src/index.css
+++ b/src/index.css
@@ -128,8 +128,8 @@ font-family: 'Zen Tokyo Zoo', cursive;*/
   }
 
   }
-  
-@media (max-width: 768px){
+
+@media screen and (max-width: 768px){
   .navbar-expand-md .navbar-collapse {
       /* display: flex!important; */
       flex-basis: auto;
