--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+input[type="file"] {
+  display: none;
+}
 .p {
   border: #23b1ae !important;
 }
@@ -33,8 +42,8 @@
   max-width: 700px !important;
   max-height: 280px !important;
   min-height: 280px !important;
-    overflow-y: scroll !important;
-    overflow-x: hidden !important;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
 }
 .dem {
   width: 100px !important;
@@ -116,123 +125,124 @@ font-family: 'Playfair Display', serif;
 font-family: 'Tangerine', cursive;
 font-family: 'Zen Tokyo Zoo', cursive;*/
 
-.element.col-md-12.navbar.navbar-expand-lg.navbar-light.bg-light{
+.element.col-md-12.navbar.navbar-expand-lg.navbar-light.bg-light {
   display: none;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .navbar-expand-md .navbar-collapse {
-      display: flex!important;
-      flex-basis: auto;
-      justify-content: space-between;
+    display: flex !important;
+    flex-basis: auto;
+    justify-content: space-between;
   }
+}
 
-  }
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .navbar-expand-md .navbar-collapse {
-      /* display: flex!important; */
-      flex-basis: auto;
-      justify-content: space-between;
+    /* display: flex!important; */
+    flex-basis: auto;
+    justify-content: space-between;
   }
-  .navbar-dark .navbar-toggler{
-      display: none !important;
+  .navbar-dark .navbar-toggler {
+    display: none !important;
   }
-  .d-n-m{
-      display: none !important;
+  .d-n-m {
+    display: none !important;
   }
-  .navbar-expand-md .navbar-collapse#navbarsCollapse, .d-b-m, .collapse:not(.show), nav.navbar .collapse.navbar-collapse.w-100{
-      display: block !important;
+  .navbar-expand-md .navbar-collapse#navbarsCollapse,
+  .d-b-m,
+  .collapse:not(.show),
+  nav.navbar .collapse.navbar-collapse.w-100 {
+    display: block !important;
   }
   .mlr-20 {
-      margin-left: 10px !important;
-      margin-right: 10px !important;
+    margin-left: 10px !important;
+    margin-right: 10px !important;
   }
-  .searchForm{
-      margin-bottom: 15px;
+  .searchForm {
+    margin-bottom: 15px;
   }
-  .navbar-expand-md .navbar-collapse.topHead{
-      display: block !important;
+  .navbar-expand-md .navbar-collapse.topHead {
+    display: block !important;
   }
-  .pr-n-m{
-      padding-right: 0px !important;
+  .pr-n-m {
+    padding-right: 0px !important;
   }
-  .pl-30-m{
-      padding-left: 30px !important;
-      padding-right: 30px !important;
+  .pl-30-m {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
   }
-  .ml-15-m{
-      margin-left: 15px !important;
+  .ml-15-m {
+    margin-left: 15px !important;
   }
-  .navbar-brand{
-      display: flex !important;
-      justify-content: flex-end !important;
-      margin-bottom: 10px !important;
+  .navbar-brand {
+    display: flex !important;
+    justify-content: flex-end !important;
+    margin-bottom: 10px !important;
   }
-  .fs-20.defaultColor.pb-2.mt-4{
-      margin-top: 40px !important;
+  .fs-20.defaultColor.pb-2.mt-4 {
+    margin-top: 40px !important;
   }
   .w-98 {
-      width: 100% !important;
+    width: 100% !important;
   }
   .createStory {
-      width: 100% !important;
-      padding-top: 40px !important;
+    width: 100% !important;
+    padding-top: 40px !important;
   }
-  .createStory p{
-      margin-bottom: 30px !important;
+  .createStory p {
+    margin-bottom: 30px !important;
   }
   .iconCont {
-      padding: 9px 4px !important;
-      width: 15% !important;
+    padding: 9px 4px !important;
+    width: 15% !important;
   }
-  .iconCont .fs-40.grayColor{
-      font-size: 30px !important;
+  .iconCont .fs-40.grayColor {
+    font-size: 30px !important;
   }
   .welcomeHead {
-      font-size: 18px !important;
+    font-size: 18px !important;
   }
   .fs-15 {
-      font-size: 13px !important;
+    font-size: 13px !important;
   }
-  .pt-5, .py-5 {
-      padding-top: 2rem!important;
+  .pt-5,
+  .py-5 {
+    padding-top: 2rem !important;
   }
-  .storyCont h5{
-      margin-top: 12px !important;
-      font-size: 15px;
+  .storyCont h5 {
+    margin-top: 12px !important;
+    font-size: 15px;
   }
-  .storyCont p{
-      font-size: 12px;
+  .storyCont p {
+    font-size: 12px;
   }
-  .createStory .col-sm-3.pl-5.pr-5{
-      padding-left: 10px !important;
-      padding-right: 10px !important;
+  .createStory .col-sm-3.pl-5.pr-5 {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
   }
   #sliderIndicators {
-      min-height: 240px !important;
+    min-height: 240px !important;
   }
-  .w-30-m{
-      width: 32% !important;
+  .w-30-m {
+    width: 32% !important;
   }
-  
-  .shareIcons{
-      padding-left: 10px !important;
+
+  .shareIcons {
+    padding-left: 10px !important;
   }
 
   .editMenu {
-      min-height: 60vh !important;
+    min-height: 60vh !important;
   }
-  #root{
-      overflow-x: hidden  !important;
+  #root {
+    overflow-x: hidden !important;
   }
-  .plr-15-m{
-      padding-left: 15px !important;
-      padding-right: 15px !important;
+  .plr-15-m {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
   }
-  .row.w-98{
-      margin-left: 0 !important;
+  .row.w-98 {
+    margin-left: 0 !important;
   }
-
-  }
-
+}
