--- a/src/components/Artscreen/custom.css
+++ b/src/components/Artscreen/custom.css
@@ -1,239 +1,247 @@
+.btn.btn-default {
+  background: #eaf0f4;
+  color: #090f51 !important;
+  padding: 0.375rem 0.75rem !important;
+}
+.mr-20 {
+  margin-right: 20px;
+}
+.rightNavbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.d-block {
+  display: block;
+}
+.mlr-20 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.rightNavbar div img {
+  display: block;
+  margin: 0 auto;
+}
 
-.btn.btn-default{
-	background: #eaf0f4;
-	color: #090f51 !important;
-	padding: .375rem .75rem !important;
+.rightNavbar div p {
+  font-size: 13px;
 }
-.mr-20{
-	margin-right: 20px;
+.profileImg {
+  border-radius: 50%;
 }
-.rightNavbar{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.d-block{
-	display: block;
-}
-.mlr-20{
-	margin-left: 20px;
-	margin-right: 20px;
-}
-.rightNavbar div img{
-	display: block;
-	margin: 0 auto;
-}
-
-.rightNavbar div p{
-	font-size: 13px;
-}
-.profileImg{
-	border-radius: 50%
-}
-.btn.btn-primary{
-	background-image: linear-gradient(#157aff, #344bff, #541bff);
+.btn.btn-primary {
+  background-image: linear-gradient(#157aff, #344bff, #541bff);
 }
 
 body {
-    /* padding-bottom: 20px; */
-  }
-  
-  .navbar {
-    margin-bottom: 20px;
-  }
-  .bl-0{
-      border-left: 0
-  }
-  .form-control:focus {
-      border-color: #ced4da;
-      outline: 0;
-      box-shadow: 0 0 0 0rem rgb(13 110 253 / 25%);
-  }
-  .fa.fa-search{
-      color: #adafb2
-  }
-  .bb-1{
-      border-bottom: 1px solid #dadada;
-  }
-  .pl-0{
-      padding-left: 0px;
-  }
-  .pt-11{
-      padding-top: 11px;
-  }
-  main{
-      display: block;
-  }
-  .br-0{
-      border-right: 0px;
-  }
-  .ml--2{
-      margin-left: -2px;
-  }
+  /* padding-bottom: 20px; */
+}
 
 .navbar {
-    background: #ffffff;
-    box-shadow: 0px 5px 15px -2px #d5d6d7;
+  margin-bottom: 20px;
 }
-.editMenu{
-    box-shadow:0px 0px 14px 2px #d5d6d7;
+.bl-0 {
+  border-left: 0;
+}
+.form-control:focus {
+  border-color: #ced4da;
+  outline: 0;
+  box-shadow: 0 0 0 0rem rgb(13 110 253 / 25%);
+}
+.fa.fa-search {
+  color: #adafb2;
+}
+.bb-1 {
+  border-bottom: 1px solid #dadada;
+}
+.pl-0 {
+  padding-left: 0px;
+}
+.pt-11 {
+  padding-top: 11px;
+}
+main {
+  display: block;
+}
+.br-0 {
+  border-right: 0px;
+}
+.ml--2 {
+  margin-left: -2px;
+}
 
+.navbar {
+  background: #ffffff;
+  box-shadow: 0px 5px 15px -2px #d5d6d7;
 }
-.w-4{
-    width: 4.5rem;
+.editMenu {
+  box-shadow: 0px 0px 14px 2px #d5d6d7;
 }
-.min-h-100{
-    height: 100%;
+.w-4 {
+  width: 4.5rem;
 }
-.navbar2{
-    box-shadow: 0px 5px 15px -2px #d5d6d7;
+.min-h-100 {
+  height: 100%;
 }
-.leftIcon{
-    direction: rtl;
+.navbar2 {
+  box-shadow: 0px 5px 15px -2px #d5d6d7;
 }
-.ml-20{
-    margin-left: 20px;
+.leftIcon {
+  direction: rtl;
 }
-.homeNavbar{
-    display: block !important;
+.ml-20 {
+  margin-left: 20px;
 }
-.w-16{
-    width: 16%;
+.homeNavbar {
+  display: block !important;
 }
-.w-7{
-    width: 7%;
+.w-16 {
+  width: 16%;
+}
+.w-7 {
+  width: 7%;
 }
 
-.w-28{
-    width: 32%;
+.w-28 {
+  width: 32%;
 }
-.drawingArea{
-    background: white;
-    width: 98%;
-    border-radius: 15px;
-    box-shadow: 6px 3px 12px 2px #d5d6d7;
+.drawingArea {
+  background: white;
+  width: 98%;
+  border-radius: 15px;
+  box-shadow: 6px 3px 12px 2px #d5d6d7;
+}
+.react-draggable {
+  height: auto !important;
+}
+.react-draggable button {
+  color: #0a1052;
+  font-size: 25px;
+  float: right;
+  padding-right: 8px;
+  padding: 0 5px 0px 0;
+  font-weight: bold;
 }
 /* .carCont button::before{
     content: "\f104";
 } */
-  @media (min-width: 768px){
+@media (min-width: 768px) {
   .navbar-expand-md .navbar-collapse {
-      display: flex!important;
-      flex-basis: auto;
-      justify-content: space-between;
+    display: flex !important;
+    flex-basis: auto;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-expand-md .navbar-collapse {
+    /* display: flex!important; */
+    flex-basis: auto;
+    justify-content: space-between;
+  }
+  .navbar-dark .navbar-toggler {
+    display: none !important;
+  }
+  .d-n-m {
+    display: none !important;
+  }
+  .navbar-expand-md .navbar-collapse#navbarsCollapse,
+  .d-b-m,
+  .collapse:not(.show),
+  nav.navbar .collapse.navbar-collapse.w-100 {
+    display: block !important;
+  }
+  .mlr-20 {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+  }
+  .searchForm {
+    margin-bottom: 15px;
+  }
+  .navbar-expand-md .navbar-collapse.topHead {
+    display: block !important;
+  }
+  .pr-n-m {
+    padding-right: 0px !important;
+  }
+  .pl-30-m {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+  }
+  .ml-15-m {
+    margin-left: 15px !important;
+  }
+  .navbar-brand {
+    display: flex !important;
+    justify-content: flex-end !important;
+    margin-bottom: 10px !important;
+  }
+  .fs-20.defaultColor.pb-2.mt-4 {
+    margin-top: 40px !important;
+  }
+  .w-98 {
+    width: 100% !important;
+  }
+  .createStory {
+    width: 100% !important;
+    padding-top: 40px !important;
+  }
+  .createStory p {
+    margin-bottom: 30px !important;
+  }
+  .iconCont {
+    padding: 9px 4px !important;
+    width: 15% !important;
+  }
+  .iconCont .fs-40.grayColor {
+    font-size: 30px !important;
+  }
+  .welcomeHead {
+    font-size: 20px !important;
+  }
+  .fs-15 {
+    font-size: 13px !important;
+  }
+  .pt-5,
+  .py-5 {
+    padding-top: 2rem !important;
+  }
+  .storyCont h5 {
+    margin-top: 12px !important;
+    font-size: 15px;
+  }
+  .storyCont p {
+    font-size: 12px;
+  }
+  .createStory .col-sm-3.pl-5.pr-5 {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+  }
+  #sliderIndicators {
+    min-height: 240px !important;
+  }
+  .w-30-m {
+    width: 32% !important;
   }
 
+  .shareIcons {
+    padding-left: 10px !important;
   }
 
-
-  @media screen and (max-width: 768px){
-    .navbar-expand-md .navbar-collapse {
-        /* display: flex!important; */
-        flex-basis: auto;
-        justify-content: space-between;
-    }
-    .navbar-dark .navbar-toggler{
-        display: none !important;
-    }
-    .d-n-m{
-        display: none !important;
-    }
-    .navbar-expand-md .navbar-collapse#navbarsCollapse, .d-b-m, .collapse:not(.show), nav.navbar .collapse.navbar-collapse.w-100{
-        display: block !important;
-    }
-    .mlr-20 {
-        margin-left: 10px !important;
-        margin-right: 10px !important;
-    }
-    .searchForm{
-        margin-bottom: 15px;
-    }
-    .navbar-expand-md .navbar-collapse.topHead{
-        display: block !important;
-    }
-    .pr-n-m{
-        padding-right: 0px !important;
-    }
-    .pl-30-m{
-        padding-left: 30px !important;
-        padding-right: 30px !important;
-    }
-    .ml-15-m{
-        margin-left: 15px !important;
-    }
-    .navbar-brand{
-        display: flex !important;
-        justify-content: flex-end !important;
-        margin-bottom: 10px !important;
-    }
-    .fs-20.defaultColor.pb-2.mt-4{
-        margin-top: 40px !important;
-    }
-    .w-98 {
-        width: 100% !important;
-    }
-    .createStory {
-        width: 100% !important;
-        padding-top: 40px !important;
-    }
-    .createStory p{
-        margin-bottom: 30px !important;
-    }
-    .iconCont {
-        padding: 9px 4px !important;
-        width: 15% !important;
-    }
-    .iconCont .fs-40.grayColor{
-        font-size: 30px !important;
-    }
-    .welcomeHead {
-        font-size: 20px !important;
-    }
-    .fs-15 {
-        font-size: 13px !important;
-    }
-    .pt-5, .py-5 {
-        padding-top: 2rem!important;
-    }
-    .storyCont h5{
-        margin-top: 12px !important;
-        font-size: 15px;
-    }
-    .storyCont p{
-        font-size: 12px;
-    }
-    .createStory .col-sm-3.pl-5.pr-5{
-        padding-left: 10px !important;
-        padding-right: 10px !important;
-    }
-    #sliderIndicators {
-        min-height: 240px !important;
-    }
-    .w-30-m{
-        width: 32% !important;
-    }
-    
-    .shareIcons{
-        padding-left: 10px !important;
-    }
-
-    .editMenu {
-        min-height: 60vh !important;
-    }
-    #root{
-        overflow-x: hidden  !important;
-    }
-    .plr-15-m{
-        padding-left: 15px !important;
-        padding-right: 15px !important;
-    }
-    .row.w-98{
-        margin-left: 0 !important;
-    }
-    .form-control.w-65 {
-        width: 85%;
-    }
-
-
-  
+  .editMenu {
+    min-height: 60vh !important;
   }
+  #root {
+    overflow-x: hidden !important;
+  }
+  .plr-15-m {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+  }
+  .row.w-98 {
+    margin-left: 0 !important;
+  }
+  .form-control.w-65 {
+    width: 85%;
+  }
+}
